--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/our_team/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
+                    <img src="./images/our_team/mark_guerrero.jpg" alt="mark guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/tom_ford.jpg" alt="tom_ford" width="264" height="260">
+                    <img src="./images/our_team/tom_ford.jpg" alt="tom ford" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
+                    <img src="./images/our_team/camila_garcia.jpg" alt="camila garcia" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
+                    <img src="./images/our_team/daniel_wilson.jpg" alt="daniel wilson" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
