--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h2>What Are We Doing</h2>
             <ul>
                 <li>
-                    <img src="./images/services/all_in_one.jpg" alt="all_in_one" width="360" height="300">
+                    <img src="./images/services/all_in_one.jpg" alt="all in one PC" width="360" height="300">
                 </li>
                 <li>
                     <img src="./images/services/phone.jpg" alt="phone" width="360" height="300">
