--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -43,7 +43,7 @@
         <!-- Section FEATURES -->
 
         <section>
-            <h2></h2>
+            <h2 hidden></h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -71,7 +71,7 @@
         <!-- Section What Are We Doing -->
 
         <section>
-            <h2>What Are We Doing</h2>
+            <h2>What are we doing</h2>
             <ul>
                 <li>
                     <img src="./images/services/all_in_one.jpg" alt="all in one PC" width="360" height="300">
@@ -118,10 +118,9 @@
     <!-- FOOTER -->
 
     <footer>
-        <a href="">WebStudio</a>
-        <div>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.
+        </p>
     </footer>
 
 </body>
