--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Section FEATURES -->
 
         <section>
-            <h2 hidden></h2>
+            <h2>.</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -119,7 +119,7 @@
 
     <footer>
         <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
 
